--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,39 @@
 /*
 font-family: 'Handlee', cursive;
 font-family: 'Montserrat', sans-serif;
-+/
+*/
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css);
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+:root {
+    --fuenteprincipal: 'Montserrat', sans-serif;
+    --fuentetitulos: 'Handlee', cursive;
+    --colorprincipal: #fa573a;
+    --colorsecundario: #21242e;
+    --fontsize: 1rem;
+    --anchomaximo: 68.75rem;
+    --margingrid: 1rem;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.container {
+    max-width: var(--anchomaximo);
+    margin: 0 auto;
+}
+
+body {
+    font-size: var(--fontsize);
+    font-family: var(--fuenteprincipal);
+}
