--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,174 @@ img {
 .container {
     max-width: var(--anchomaximo);
     margin: 0 auto;
+    padding: 0 0.625rem;
+
 }
 
 body {
     font-size: var(--fontsize);
     font-family: var(--fuenteprincipal);
 }
+
+/* inicio header*/
+header .nav-top {
+    background-color: var(--colorsecundario);
+    padding: 1.25rem 0px;
+}
+
+header .nav-top .container {
+    display: flex;
+    justify-content: space-around;
+
+    & span {
+        display: none;
+    }
+
+    & i {
+        color: var(--colorprincipal);
+        font-size: 140%;
+    }
+}
+
+header nav .container {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+header:is(figure, .hamburguesa) {
+    width: 50%;
+    padding: 1.25rem 0;
+}
+
+header nav figure a {
+    display: block;
+    max-width: 6.25rem;
+}
+
+header figure {
+    width: calc(100% - 30px);
+    padding: 1.25rem 0;
+}
+
+header .hamburguesa {
+    width: 30px;
+    padding: 1.25rem 0;
+    cursor: pointer;
+
+
+
+}
+
+header .menu {
+    width: 100%;
+}
+
+
+
+header .hamburguesa div {
+
+    border-top: 0.125rem solid #aaa;
+    max-width: 2.1875rem;
+    margin-bottom: 0.625rem;
+
+}
+
+header .container .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    & li {
+        margin-bottom: 10px;
+
+        width: 100%;
+        text-align: center;
+        padding: 10px
+    }
+
+    & a {
+        text-decoration: none;
+        color: #aaa;
+        width: 100%;
+        display: block;
+        padding: 10px;
+        border-bottom: 2px solid #aaa;
+    }
+
+
+
+    & a:hover {
+        color: var(--colorprincipal);
+
+    }
+
+}
+
+header .container .menu :last-child a {
+    border-bottom: 0px;
+
+}
+
+
+
+/* inicio header*/
+
+/* inicio mequeries*/
+
+@media (min-width:48rem) {
+    header .nav-top .container {
+
+        justify-content: space-between;
+
+        & span {
+            display: inline;
+        }
+
+        & i {
+            color: var(--colorprincipal);
+            font-size: 140%;
+        }
+
+        & a {
+            color: white;
+            text-decoration: none;
+            font-size: 110%;
+        }
+    }
+
+}
+
+@media(min-width:1004px) {
+    header .hamburguesa {
+        display: none;
+
+    }
+
+
+
+    header figure {
+        width: 80%;
+
+    }
+
+
+    header .menu {
+        width: 20%;
+
+    }
+
+    header .container .menu {
+
+        flex-direction: row;
+
+    }
+
+
+    header .container .menu a {
+        border-bottom: 0px;
+    }
+}
+
+/* fin mequeries*/
