--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,111 @@ footer {
 
 /* final hero*/
 
+/*Inicio services*/
+
+
+
+main section {
+    padding: 2.125rem 0.625rem;
+}
+
+main .grid {
+    display: grid;
+    gap: var(--margingrid);
+    grid-template-columns: 1fr;
+
+}
+
+main section h2 {
+    font-family: var(--fuentetitulos);
+    font-size: 2rem;
+    text-align: center;
+
+    & span {
+        color: var(--colorprincipal);
+    }
+}
+
+main section .underline {
+    width: 100px;
+    margin: 0 auto;
+    color: var(--colorprincipal);
+    font-weight: bold;
+    position: relative;
+    text-align: center;
+
+    & hr {
+        border-color: var(--colorprincipal);
+        position: absolute;
+        width: 100px;
+        top: -2px;
+    }
+}
+
+.grid article {
+    padding: 20px 0;
+    border-bottom: 1px solid #aaa;
+    margin: var(--margingrid);
+
+    & h3 {
+        margin-top: 20px;
+        font-weight: bold;
+        font-size: 115%;
+    }
+
+    & p {
+        font-size: 95%;
+        color: #666;
+        line-height: 1.5;
+        margin-bottom: var(--margingrid);
+    }
+
+    & a {
+        text-decoration: none;
+        color: var(--colorprincipal);
+        font-weight: 700;
+    }
+
+    & i {
+        color: var(--colorprincipal)
+    }
+
+
+    & div i {
+        border: 1px solid var(--colorprincipal);
+        padding: 0.8rem;
+        font-size: 100%;
+    }
+}
+
+
+
+
+/* final services*/
+
 /* inicio mequeries*/
+@media(min-width:600px) {
+    main .grid {
+
+        grid-template-columns: repeat(2, 1fr);
+
+
+    }
+
+    main .grid article:last-child {
+        grid-column: 1/3;
+    }
+
+    .grid article {
+        padding: 20px;
+        border-left: 1px solid #aaa;
+        border-bottom: 0px;
+
+
+    }
+}
+
+
 
 @media (min-width:48rem) {
     header .nav-top .container {
@@ -290,8 +394,22 @@ footer {
 
     }
 
+    main .grid {
+
+        grid-template-columns: repeat(3, 1fr);
+
+
+    }
+
+    main .grid article:last-child {
+        grid-column: auto;
+    }
+
+
 
 }
+
+
 
 @media(min-width:1004px) {
     header .hamburguesa {
