--- a/css/style.css
+++ b/css/style.css
@@ -339,10 +339,83 @@ main section .underline {
     }
 }
 
-
-
-
 /* final services*/
+
+
+
+
+
+/* inicio about*/
+section#about {
+    margin-bottom: 200px;
+
+    & h3 {
+        font-weight: 700;
+        font-size: 120%;
+    }
+
+    & h4 {
+        color: var(--colorprincipal);
+        font-size: 110%;
+        margin: var(--margingrid) 0;
+    }
+
+    & p {
+        color: #666;
+        line-height: 1.20;
+    }
+
+    & .imagen {
+        border: 3px solid var(--colorprincipal);
+        transform: rotateZ(10deg);
+        width: 95%;
+        transition: 1s;
+
+
+        & .marco {
+            transform: rotateZ(-10deg);
+            transition: 1s;
+        }
+    }
+
+
+
+
+
+    .boton {
+        display: inline-block;
+        color: white;
+        background-color: var(--colorprincipal);
+        padding: 1.25rem;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        margin: var(--margingrid) 0;
+        border: 2px solid var(--colorprincipal);
+
+
+    }
+
+    .boton:hover {
+        background-color: transparent;
+        color: var(--colorprincipal);
+
+
+        & i {
+            transform: translateX(5px);
+            transition: transform 0.5s;
+        }
+    }
+}
+
+section#about .flex {
+    margin-top: 1.875rem;
+    display: flex;
+    flex-direction: column;
+    gap: var(--margingrid);
+}
+
+/* final about*/
 
 /* inicio mequeries*/
 @media(min-width:600px) {
@@ -362,6 +435,12 @@ main section .underline {
         border-left: 1px solid #aaa;
         border-bottom: 0px;
 
+
+    }
+
+    section#about .flex {
+
+        flex-direction: row;
 
     }
 }
