--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,172 @@ section#about .flex {
 
 /* final about*/
 
+
+/* Inicio Blog */
+
+
+main section {
+    padding: 2.125rem 0.625rem;
+}
+
+main .grid {
+    display: grid;
+    gap: var(--margingrid);
+    grid-template-columns: 1fr;
+
+}
+
+main section h2 {
+    font-family: var(--fuentetitulos);
+    font-size: 2rem;
+    text-align: center;
+
+    & span {
+        color: var(--colorprincipal);
+    }
+}
+
+main section .underline {
+    width: 100px;
+    margin: 0 auto;
+    color: var(--colorprincipal);
+    font-weight: bold;
+    position: relative;
+    text-align: center;
+
+    & hr {
+        border-color: var(--colorprincipal);
+        position: absolute;
+        width: 100px;
+        top: -2px;
+    }
+}
+
+.grid article {
+    padding: 20px 0;
+    border-bottom: 1px solid #aaa;
+    margin: var(--margingrid);
+
+    & fgure {
+        display: flex;
+        position: relative;
+        margin: 0 auto;
+
+        & img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+    }
+
+    & h3 {
+        margin-top: 20px;
+        font-weight: bold;
+        font-size: 115%;
+    }
+
+    & p {
+        font-size: 95%;
+        color: #666;
+        line-height: 1.5;
+        margin-bottom: var(--margingrid);
+    }
+
+    & a {
+        text-decoration: none;
+        color: var(--colorprincipal);
+        font-weight: 700;
+    }
+
+    & i {
+        color: var(--colorprincipal)
+    }
+
+
+    & div i {
+        border: 1px solid var(--colorprincipal);
+        padding: 0.8rem;
+        font-size: 100%;
+    }
+}
+
+/* Final Blog */
+
+/* Inicio Menu */
+section#menu {
+    margin-bottom: 200px;
+    background-color: var(--colorsecundario);
+    color: white;
+
+    & h3 {
+        font-weight: 700;
+        font-size: 120%;
+    }
+
+    & h4 {
+        color: var(--colorprincipal);
+        font-size: 110%;
+        margin: var(--margingrid) 0;
+    }
+
+    & p {
+        color: #666;
+        line-height: 1.20;
+    }
+
+    & .imagen {
+        border: 3px solid var(--colorprincipal);
+        transform: rotateZ(10deg);
+        width: 95%;
+        transition: 1s;
+
+
+        & .marco {
+            transform: rotateZ(-10deg);
+            transition: 1s;
+        }
+    }
+
+    & .container2 {
+        display: flex;
+        flex-wrap: wrap;
+
+
+        & .drc {
+            display: 100%;
+            color: white;
+        }
+
+        & .izq {
+            display: 100%;
+            color: white;
+
+
+
+            & a {
+                flex-direction: column;
+                text-decoration: none;
+                color: white;
+                margin-top: 10px;
+                margin-bottom: 10px;
+            }
+        }
+    }
+
+
+
+}
+
+section#menu .flex {
+    margin-top: 1.875rem;
+    display: flex;
+    flex-direction: column;
+    gap: var(--margingrid);
+}
+
+
+/* Final Menu */
+
 /* inicio mequeries*/
 @media(min-width:600px) {
     main .grid {
